# cse7319-term-project

./: .env-example  README.md  k8s-manifest.yaml  project-proposal.md  project_demo.ipynb  pyproject.toml  technical-class-diagram.md
src/: fastapi_app.py  main.py  streamlit_app.py
src/controller/: post_controller.py
src/model/: models.py
src/service/: llm_service.py  reddit_service.py
